--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -1,10 +1,16 @@
 .categories-section {
-  background: linear-gradient(to bottom, #000, #111);
+  position: absolute;
+  top: 650px;
+  /* background: linear-gradient(to bottom, #000, #111); */
   min-height: 90vh;
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
-  padding-top: 80px;
+  align-self: center;
+  z-index: 10;
+  margin-top: -100px;
+  
 }
 
 .team-headerr {
