--- a/src/styles/SliderComponent.css
+++ b/src/styles/SliderComponent.css
@@ -1,9 +1,14 @@
+.wrapper{
+  position: relative;
+}
+
 .hero-slider {
   position: relative;
   height: 100vh;
   min-height: 700px;
   background-color: #1a1a1a;
   overflow: hidden;
+  
 }
 
 /* Slide Styles */
@@ -22,6 +27,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+ 
 }
 
 .slide-text {
